Add icon instead of audio-version to Close-button

--- a/interfaces/PA-App/src/app/user-menu/user-menu.component.html
+++ b/interfaces/PA-App/src/app/user-menu/user-menu.component.html
@@ -29,9 +29,11 @@
     >
       {{ 'account.delete-digital-id'|translate }}
     </ion-item>
-    <ion-button (click)="close()"
+    <ion-button type="button"
+                (click)="close()"
                 expand="block"
     >
+      <ion-icon name="close" size="small"></ion-icon>
       {{ 'shared.close-button'|translate }}
     </ion-button>
   </ion-list>
