Make PlayTextAudio-button size/type configurable

--- a/interfaces/PA-App/src/app/shared/play-text-audio/play-text-audio.component.html
+++ b/interfaces/PA-App/src/app/shared/play-text-audio/play-text-audio.component.html
@@ -1,14 +1,18 @@
 
 <ion-button *ngIf="!isDisabled || alwaysVisible"
             type="button"
-            color="tertiary"
+            color="primary"
             shape="round"
             fill="solid"
-            size="small"
+            [size]="size ? size : 'small'"
             [attr.title]="buttonLabel"
             [attr.aria-label]="buttonLabel"
             (click)="toggleState()"
-            style="display: inline-block; vertical-align: middle;"
+            [ngClass]="{
+              'is-for-submit': (type === buttonTypes.forSubmit),
+              'is-thin': (type === buttonTypes.forSubmit) || (type === buttonTypes.forRadio),
+              'play-text-audio': true
+            }"
 >
   <ion-icon [name]="iconName"
             size="small"
