--- a/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
+++ b/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
@@ -18,6 +18,7 @@
                   [disabled]="typeChosen"
         >
           <play-text-audio key="personal.signup-signin.create-id"
+                           type="forRadio"
                            slot="start"
                            class="ion-no-margin ion-margin-end"
           ></play-text-audio>
@@ -31,6 +32,7 @@
                   [disabled]="useLocalStorage || typeChosen"
         >
           <play-text-audio key="personal.signup-signin.login-id"
+                           type="forRadio"
                            slot="start"
                            class="ion-no-margin ion-margin-end"
           ></play-text-audio>
@@ -43,7 +45,10 @@
       <ion-row *ngIf="signupSigninChoice && !typeChosen"
                class="ion-nowrap ion-align-items-center ion-margin-top"
       >
-        <play-text-audio key="shared.submit-button"></play-text-audio>
+        <play-text-audio key="shared.submit-button"
+                         type="forSubmit"
+                         size="default"
+        ></play-text-audio>
         <ion-button type="submit"
                     (click)="submitSignupSignin()"
                     [disabled]="typeChosen"
