--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -64,7 +64,10 @@
 
     <div class="ion-margin-top">
       <ion-row class="ion-nowrap ion-align-items-center">
-        <play-text-audio key="personal.enroll-in-program.submit-confirm"></play-text-audio>
+        <play-text-audio key="personal.enroll-in-program.submit-confirm"
+                         type="forSubmit"
+                         size="default"
+        ></play-text-audio>
         <ion-button type="submit"
                     (click)="submitConfirm()"
                     [disabled]="isDisabled"
@@ -75,7 +78,10 @@
         </ion-button>
       </ion-row>
       <ion-row class="ion-nowrap ion-align-items-center">
-        <play-text-audio key="personal.enroll-in-program.change"></play-text-audio>
+        <play-text-audio key="personal.enroll-in-program.change"
+                         type="forSubmit"
+                         size="default"
+        ></play-text-audio>
         <ion-button type="button"
                     (click)="changeAnswers()"
                     [disabled]="isDisabled"
