--- a/interfaces/PA-App/src/app/personal-components/login-identity/login-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/login-identity/login-identity.component.html
@@ -21,7 +21,10 @@
         <ion-row *ngIf="username && !usernameSubmitted"
                  class="ion-nowrap ion-align-items-center ion-margin-top"
         >
-          <play-text-audio key="personal.login-identity.submit-username"></play-text-audio>
+          <play-text-audio key="personal.login-identity.submit-username"
+                           type="forSubmit"
+                           size="default"
+          ></play-text-audio>
           <ion-button [disabled]="isInProgress || isDisabled"
                       (click)="usernameSubmitted=true;"
                       type="button"
@@ -45,7 +48,10 @@
       <ion-row *ngIf="password && !isDisabled"
                 class="ion-nowrap ion-align-items-center ion-margin-top"
       >
-        <play-text-audio key="personal.login-identity.submit-password"></play-text-audio>
+        <play-text-audio key="personal.login-identity.submit-password"
+                         type="forSubmit"
+                         size="default"
+        ></play-text-audio>
         <ion-button *ngIf="password && !isDisabled"
                     [disabled]="isInProgress || isDisabled"
                     type="submit"
