--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -29,7 +29,10 @@
       <ion-row *ngIf="fspChoice && !fspSubmitted"
                class="ion-nowrap ion-align-items-center ion-margin-top"
       >
-        <play-text-audio key="shared.submit-button"></play-text-audio>
+        <play-text-audio key="shared.submit-button"
+                         type="forSubmit"
+                         size="default"
+        ></play-text-audio>
         <ion-button type="submit"
                     [disabled]="fspSubmitted || isDisabled"
                     expand="block"
