--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -34,7 +34,10 @@
       <ion-row *ngIf="programChoice && !isDisabled"
                class="ion-nowrap ion-align-items-center ion-margin-top"
       >
-        <play-text-audio key="shared.submit-button"></play-text-audio>
+        <play-text-audio key="shared.submit-button"
+                         type="forSubmit"
+                         size="default"
+        ></play-text-audio>
         <ion-button type="submit"
                     expand="block"
                     style="flex-basis:100%"
