--- a/interfaces/PA-App/src/app/shared/more-info-button/more-info-button.component.html
+++ b/interfaces/PA-App/src/app/shared/more-info-button/more-info-button.component.html
@@ -1,8 +1,14 @@
 <ion-row class="ion-nowrap ion-align-items-center">
-  <play-text-audio [key]="buttonKey"></play-text-audio>
+  <play-text-audio [key]="buttonKey"
+                   type="forSubmit"
+                   size="small"
+  ></play-text-audio>
   <ion-button type="button"
               size="small"
               (click)="openInfoPopup()"
+              [ngClass]="{
+                'ion-no-margin': !!buttonKey
+              }"
   >
     <ion-icon name="information-circle-outline" slot="start"></ion-icon>
 
