--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -1,7 +1,11 @@
 <section #selectLanguage>
   <dialogue-turn>
-    <play-text-audio key="personal.select-language.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
-    <p [innerHTML]="'personal.select-language.introduction'|translate"></p>
+    <ng-container *ngFor="let language of languages">
+      <play-text-audio [key]="'personal.select-language.introduction.' + language.id" class="ion-float-end ion-margin-start"></play-text-audio>
+      <div [innerHTML]="'personal.select-language.introduction.' + language.id|translate"
+           class="ion-margin-bottom"
+      ></div>
+    </ng-container>
     <p>
       <more-info-button buttonKey="personal.select-language.more-info"
                         messageKey="personal.select-language.info-message"
