Rename translation-key to prevent false-positive lint-errors
The CAPITAL vs. lowercase "personal" is apparently hard to distinguish from a 'real' typo.

--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title>
-      {{ 'PERSONAL'|translate }}
+      {{ 'YOU'|translate }}
     </ion-title>
     <ion-buttons slot="end" *ngIf="isDebug">
       <ion-button (click)="showDebug=!showDebug;"
