--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="top">
     <ion-tab-button tab="personal" color="dark" layout="label-hide">
       <ion-icon name="chatboxes" size="large"></ion-icon>
-      <ion-label>{{ 'PERSONAL'|translate }}</ion-label>
+      <ion-label>{{ 'YOU'|translate }}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab1" [disabled]="!isLoggedIn" color="primary" layout="label-hide">
