--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -4,7 +4,7 @@
                  [isSpoken]="credentialReceived"
   >
     <play-text-audio key="personal.store-credential.done" class="ion-float-end ion-margin-start"></play-text-audio>
-    <p [innerHTML]="'personal.store-credential.done'|translate:{ ngo: currentProgram?.ngo }"></p>
+    <p [innerHTML]="'personal.store-credential.done'|translate:{ ngo:'<strong>'+currentProgram?.ngo+'</strong>' }"></p>
   </dialogue-turn>
   <br>
   <br>
