--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -16,7 +16,7 @@
     </ion-avatar>
     <div *ngIf="!isSystem && !isSelf && isNgoA; else noLogo">
       <ion-avatar style="border-radius: 0 !important;">
-        <img [alt]="actor" src="./assets/logos/ngo-a_white_512x512.png">
+        <img [alt]="actor" src="./assets/logos/ngo-a.png">
       </ion-avatar>
     </div>
     <ng-template #noLogo >
