--- a/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
+++ b/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
@@ -1,8 +1,10 @@
 <section #mainMenu>
-  <dialogue-turn>
+  <dialogue-turn isSpoken="true">
     {{ 'validation.main-menu.introduction'|translate }}
   </dialogue-turn>
-  <dialogue-turn actor="self">
+  <dialogue-turn actor="self"
+                 isSpoken="true"
+  >
     <ion-radio-group (ionChange)="changeOption($event)"
     >
       <ion-item *ngFor="let option of menuOptions"
