AB#1709 show all questions at once in AW

--- a/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
@@ -6,7 +6,7 @@
   <dialogue-turn actor="self"
                  *ngFor="let question of questions; let i=index; first as isFirst;"
                 [isConnected]="!isFirst"
-                [isSpoken]="isFirst || hasAnswered || changedAnswers"
+                isSpoken="true"
   >
     <ion-label>
       {{ question.label }}
