AB#1774 spinner when waiting for download

--- a/interfaces/AW-App/src/app/app.scss
+++ b/interfaces/AW-App/src/app/app.scss
@@ -5,6 +5,16 @@
 // file can hold Sass mixins, functions, and placeholder classes to be imported
 // and used throughout the application.
 
+.loading-indicator {
+  display: flex;
+  min-height: 100px;
+  justify-content: center;
+}
+.loading-indicator--spinner {
+  margin: auto;
+}
+
+// ----------------------------------------------------------------------------
 
 // Override default styles to emphasize where to input
 // Make an exception for 'native' inputs in 'items':
@@ -12,3 +22,5 @@
 ion-textarea {
   --background: #dfe5fe !important;
 }
+
+
