--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -26,7 +26,7 @@
         </ion-radio-group>
       </div>
       <div *ngSwitchCase="answerType.Number">
-        <ion-input type="number"
+        <ion-input type="text"
                    inputmode="numeric"
                    pattern="[0-9]*"
                    [name]="question.code"
