--- a/interfaces/AW-App/src/app/validation-components/download-data/download-data.component.html
+++ b/interfaces/AW-App/src/app/validation-components/download-data/download-data.component.html
@@ -1,11 +1,11 @@
 <section>
-  <dialogue-turn *ngIf="!downloadReady"
-                 isSpoken="!downloadReady"
+  <dialogue-turn *ngIf="!downloadReady && !downloadAborted"
+                 isSpoken="!downloadReady && !downloadAborted"
   >
     {{ 'validation.download-data.downloading'|translate }}
   </dialogue-turn>
   <div class="loading-indicator"
-       [hidden]="downloadReady" 
+       [hidden]="downloadReady || downloadAborted" 
   >
     <ion-spinner name="dots" 
                  class="loading-indicator--spinner"
@@ -19,5 +19,8 @@
       [innerHTML]="'validation.download-data.download-result'|translate:{ nrDownloaded:'<strong>'+nrDownloaded+'</strong>' }"
       class="ion-margin-bottom">
     </div>
+  </dialogue-turn>
+  <dialogue-turn *ngIf="downloadAborted" [isSpoken]="downloadAborted">
+    {{ 'validation.download-data.download-aborted'|translate }}
   </dialogue-turn>
 </section>
