--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -69,6 +69,9 @@
                         [phaseReady]="phaseReady"
                         (isNewPhase)="onNewPhase($event)"
         ></app-phase-next>
+        
+        <app-program-people-affected [selectedPhase]="selectedPhase"
+        ></app-program-people-affected>
 
         <app-program-people [selectedPhase]="selectedPhase"
                             [programId]="program?.id"
