--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -71,6 +71,7 @@
         ></app-phase-next>
         
         <app-program-people-affected [selectedPhase]="selectedPhase"
+                                     [programId]="program?.id"
         ></app-program-people-affected>
 
         <app-program-people [selectedPhase]="selectedPhase"
