--- a/interfaces/PA-App/src/app/shared/qr-scanner/qr-scanner.component.html
+++ b/interfaces/PA-App/src/app/shared/qr-scanner/qr-scanner.component.html
@@ -37,7 +37,7 @@
                  (camerasFound)="onCamerasFound($event)"
                  (camerasNotFound)="onCamerasNotFound()"
                  (scanSuccess)="onScanSuccess($event)"
-                 (scanError)="onScanError($event)"
+                 (scanError)="onScanError()"
                  class="qr-scanner--zxing-component"
   ></zxing-scanner>
 
