Store validation data AB#1830

--- a/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-program/validate-program.component.html
@@ -100,7 +100,7 @@
 
     <p class="ion-margin-top">
       <ion-button type="submit"
-                  (click)="issueCredential()"
+                  (click)="validateAttributes()"
                   expand="block"
       >
         {{ 'validation.validate-program.confirm-button'|translate }}
