AB#1849 Change User-menu-button into 'fourth tab'
+ remove unused tab3-page
+ rename/move tab-label/title translations
+ remove unused UI-Service
+ always show user-menu-button (only enable after login)

--- a/interfaces/PA-App/src/app/tabs/tabs.page.scss
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.scss
@@ -1,4 +1,3 @@
-
 ion-tab-bar {
   border-bottom: none;
 }
@@ -12,7 +11,7 @@ ion-tab-button {
       background: var(--ion-color-dark);
     }
   }
- 
+
   &#tab-button-tab1 {
     color: var(--ion-color-primary-contrast);
     background: var(--ion-color-primary-tint);
@@ -21,5 +20,11 @@ ion-tab-button {
       background: var(--ion-color-primary);
     }
   }
+}
 
+.tab-button-person-icon {
+  background: var(--ion-color-primary);
+  color: white;
+  border-radius: 50%;
+  padding: 0.25em;
 }
