--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title>
-      {{ 'YOU'|translate }}
+      {{ 'tabs.you'|translate }}
     </ion-title>
     <ion-buttons slot="end" *ngIf="isDebug">
       <ion-button (click)="showDebug=!showDebug;"
