--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -1,29 +1,41 @@
 <ion-tabs>
 
   <ion-tab-bar slot="top">
-    <ion-tab-button tab="personal" color="dark" layout="label-hide">
-      <ion-icon name="chatboxes" size="large"></ion-icon>
-      <ion-label>{{ 'YOU'|translate }}</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab1" [disabled]="!isLoggedIn" color="primary" layout="label-hide">
-      <ion-icon name="people" size="large"></ion-icon>
-      <ion-label>{{ 'WORLD'|translate }}</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3" disabled layout="label-hide">
-      <ion-icon name="cash" size="large"></ion-icon>
-      <ion-label>{{ 'DEVICE'|translate }}</ion-label>
-    </ion-tab-button>
-
-    <ion-fab-button *ngIf="userMenuShown"
-                    size="small"
-                    [color]="isLoggedIn ? 'success' : 'medium'"
-                    [disabled]="!isLoggedIn"
-                    (click)="openUserMenu($event)"
+    <ion-tab-button tab="personal"
+                    color="dark"
+                    layout="label-hide"
+                    [title]="'tabs.you'|translate"
     >
-      <ion-icon name="person" size="large"></ion-icon>
-    </ion-fab-button>
+      <ion-icon name="chatboxes" size="large"></ion-icon>
+      <ion-label>{{ 'tabs.you'|translate }}</ion-label>
+    </ion-tab-button>
 
+    <ion-tab-button tab="tab1"
+                    disabled
+                    color="primary"
+                    layout="label-hide"
+                    [title]="'tabs.community'|translate"
+    >
+      <ion-icon name="people" size="large"></ion-icon>
+      <ion-label>{{ 'tabs.community'|translate }}</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button disabled
+                    layout="label-hide"
+    >
+      <ion-label></ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button [disabled]="!isLoggedIn"
+                    (click)="openUserMenu($event)"
+                    layout="label-hide"
+                    [title]="'tabs.account'|translate"
+    >
+      <ion-icon name="person"
+                size="large"
+                class="tab-button-person-icon"
+      ></ion-icon>
+      <ion-label>{{ 'tabs.account'|translate }}</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
